--- a/Vue/index.html
+++ b/Vue/index.html
@@ -9,10 +9,9 @@
   <script src="https://cdn.bootcdn.net/ajax/libs/vuex/3.5.1/vuex.min.js"></script>
   <link href="https://cdn.bootcss.com/element-ui/2.14.1/theme-chalk/index.css" rel="stylesheet">
   <script src="https://cdn.bootcdn.net/ajax/libs/element-ui/2.14.1/index.min.js"></script>
-  
-  <!-- <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.21.1/axios.min.js"></script> -->
-  <!-- <script src="https://cdn.bootcdn.net/ajax/libs/js-cookie/latest/js.cookie.min.js"></script> -->
-  <!-- <script src="https://cdn.bootcdn.net/ajax/libs/vuex-persistedstate/4.0.0-beta.3/vuex-persistedstate.es.min.js"></script> -->
+  <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.21.1/axios.min.js"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/js-cookie/latest/js.cookie.min.js"></script>
+  <script src="https://cdn.bootcdn.net/ajax/libs/vuex-persistedstate/4.0.0-beta.3/vuex-persistedstate.umd.min.js"></script>
   
   <title>blog</title>
 </head>
