--- a/Vue/index.html
+++ b/Vue/index.html
@@ -1,36 +1,30 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <script src="https://cdn.bootcdn.net/ajax/libs/vue/2.6.3/vue.min.js"></script>
-  <script src="https://cdn.bootcdn.net/ajax/libs/vue-router/3.0.1/vue-router.min.js"></script>
-  <script src="https://cdn.bootcdn.net/ajax/libs/vuex/3.5.1/vuex.min.js"></script>
-  <link href="https://cdn.bootcss.com/element-ui/2.14.1/theme-chalk/index.css" rel="stylesheet">
-  <script src="https://cdn.bootcdn.net/ajax/libs/element-ui/2.14.1/index.min.js"></script>
-  <script src="https://cdn.bootcdn.net/ajax/libs/axios/0.21.1/axios.min.js"></script>
-  <script src="https://cdn.bootcdn.net/ajax/libs/js-cookie/latest/js.cookie.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue-router@3.5.3/dist/vue-router.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vuex@3.6.2/dist/vuex.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vuex-persistedstate@4.1.0/dist/vuex-persistedstate.umd.js"
+    integrity="sha256-yBaY8SekTOgndT/8xrlr32rOp+qISCIfv+NWqUT92ps=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios@0.24.0/dist/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/element-ui@2.14.1/lib/index.js"
+    integrity="sha256-GlWNZRnlw+l9/NaHC10Nk0Bflwih6HE7tD3hbm1ljDg=" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-ui@2.14.1/lib/theme-chalk/index.css"
+    integrity="sha256-bHcFRzLiKH6f01ebzmMYw8hJlYauysooMBDoZEKOrhQ=" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/emoji-js@3.6.0/lib/emoji.min.js"
+    integrity="sha256-N7QVQSk3/0KusOUS9jcmJlMHx2EkuI3zy38PPWvo9C8=" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/themes/prism.min.css" />
+  <link rel="stylesheet"
+    href="https://uicdn.toast.com/editor-plugin-code-syntax-highlight/latest/toastui-editor-plugin-code-syntax-highlight.min.css" />
+  <script src="https://uicdn.toast.com/editor/latest/toastui-editor-all.min.js"></script>
   <script
-    src="https://cdn.bootcdn.net/ajax/libs/vuex-persistedstate/4.0.0-beta.3/vuex-persistedstate.umd.min.js"></script>
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/styles/tomorrow.min.css">
-  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/highlight.min.js"></script>
-  <script src="https://uicdn.toast.com/editor/latest/toastui-editor-viewer.js"></script>
-  <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor-viewer.min.css" />
+    src="https://uicdn.toast.com/editor-plugin-code-syntax-highlight/latest/toastui-editor-plugin-code-syntax-highlight-all.min.js"></script>
   <title>blog</title>
 </head>
-
 <body>
   <div id="app"></div>
-  <!-- built files will be auto injected -->
-  <!-- "axios": "^0.21.0",
-    "element-ui": "^2.14.1",
-    "js-cookie": "^2.2.1",
-    "markdown-it-vue": "^1.1.6",
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "vue-waterfall2": "^1.10.1",
-    "vuex": "^3.6.0" -->
 </body>
-
 </html>
