更换为字节CDN

--- a/Vue/index.html
+++ b/Vue/index.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vue-router@3.5.3/dist/vue-router.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vuex@3.6.2/dist/vuex.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vuex-persistedstate@4.1.0/dist/vuex-persistedstate.umd.js"
-    integrity="sha256-yBaY8SekTOgndT/8xrlr32rOp+qISCIfv+NWqUT92ps=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/axios@0.24.0/dist/axios.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/element-ui@2.14.1/lib/index.js"
-    integrity="sha256-GlWNZRnlw+l9/NaHC10Nk0Bflwih6HE7tD3hbm1ljDg=" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-ui@2.14.1/lib/theme-chalk/index.css"
-    integrity="sha256-bHcFRzLiKH6f01ebzmMYw8hJlYauysooMBDoZEKOrhQ=" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/emoji-js@3.6.0/lib/emoji.min.js"
-    integrity="sha256-N7QVQSk3/0KusOUS9jcmJlMHx2EkuI3zy38PPWvo9C8=" crossorigin="anonymous"></script>
+  <script src="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/vue/2.6.14/vue.min.js"></script>
+  <script src="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/vue-router/3.5.3/vue-router.min.js"
+    type="application/javascript"></script>
+  <script src="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/vuex/3.6.2/vuex.min.js"
+    type="application/javascript"></script>
+  <script
+    src="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/vuex-persistedstate/4.1.0/vuex-persistedstate.umd.min.js"
+    type="application/javascript"></script>
+
+  <script src="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/axios/0.26.0/axios.min.js"
+    type="application/javascript"></script>
+
+  <script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/js-cookie/3.0.1/js.cookie.min.js"
+    type="application/javascript"></script>
+
+  <script src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/element-ui/2.14.1/index.min.js"
+    type="application/javascript"></script>
+
+  <link href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/element-ui/2.14.1/theme-chalk/index.min.css"
+    type="text/css" rel="stylesheet" />
+
+
+  <script src="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/emoji-js/3.6.0/emoji.min.js"
+    type="application/javascript"></script>
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.23.0/themes/prism.min.css" />
   <link rel="stylesheet"
     href="https://uicdn.toast.com/editor-plugin-code-syntax-highlight/latest/toastui-editor-plugin-code-syntax-highlight.min.css" />
@@ -27,4 +40,5 @@
 <body>
   <div id="app"></div>
 </body>
+
 </html>
